--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
+  "name": "9bit-ui-kit",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "webpack serve",
+    "build": "webpack build --mode=production"
+  },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "serve": "^14.2.1"
   },
-  "name": "vg-decor",
-  "version": "1.0.0",
-  "main": "index.js",
   "devDependencies": {
     "autoprefixer": "^10.4.17",
     "css-loader": "^6.10.0",
@@ -18,13 +21,5 @@
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.0"
-  },
-  "scripts": {
-    "start": "webpack serve",
-    "build": "webpack build --mode=production"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
