--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack build --mode=production"
+    "build": "webpack build --mode=production",
+    "prepare": "husky install",
+    "test": "echo test",
+    "lint": "eslint --ext .js .",
+    "lint:fix": "npm run lint --fix"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -13,7 +17,10 @@
   "devDependencies": {
     "autoprefixer": "^10.4.17",
     "css-loader": "^6.10.0",
+    "eslint": "^8.56.0",
+    "eslint-config-google": "^0.14.0",
     "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.0.11",
     "postcss-loader": "^8.1.0",
     "sass": "^1.70.0",
     "sass-loader": "^14.1.0",
