--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "serve": "^14.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
     "autoprefixer": "^10.4.17",
     "css-loader": "^6.10.0",
     "eslint": "^8.56.0",
