--- a/package.json
+++ b/package.json
@@ -23,12 +23,23 @@
     "eslint-config-google": "^0.14.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "postcss-loader": "^8.1.0",
+    "prettier": "3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "sass": "^1.70.0",
     "sass-loader": "^14.1.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.0"
+  },
+  "lint-staged": {
+    "**/*": [
+      "prettier --write --ignore-unknown"
+    ],
+    "*.js": [
+      "eslint"
+    ]
   }
 }
