--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prepare": "husky install",
     "test": "echo test",
     "lint": "eslint --ext .js .",
-    "lint:fix": "npm run lint --fix"
+    "lint:fix": "npm run lint --fix",
+    "prettier": "npx prettier . --write"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
