--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "webpack build --mode=production",
     "prepare": "husky install",
     "test": "echo test",
+    "prettier": "npx prettier . --write",
     "lint": "eslint --ext .js .",
     "lint:fix": "npm run lint --fix"
   },
