--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-  "printWidth": 80,
-  "singleQuote": true,
-  "useTabs": false,
-  "tabWidth": 2,
-  "semi": true,
-  "bracketSpacing": true,
-  "trailingComma": "all"
+	"printWidth": 80,
+	"singleQuote": true,
+	"useTabs": true,
+	"tabWidth": 2,
+	"semi": true,
+	"bracketSpacing": true,
+	"trailingComma": "all"
 }
